--- a/trunk/doc/proposal-master.tex
+++ b/trunk/doc/proposal-master.tex
@@ -26,7 +26,7 @@ Facultad de Informática\\
 \author{Tesista: Andrés More - {\tt amore@hal.famaf.unc.edu.ar}\\
 Director: Dr. Fernando G. Tinetti - {\tt fernando@lidi.info.unlp.edu.ar}}
 
-\date{Agosto de 2013}
+\date{Noviembre de 2013}
 
 \maketitle
 
@@ -53,23 +53,23 @@ Algunas referencias a la problemática se incluyen a continuación como soporte 
 
 \begin{enumerate}
 
-\item Cómo correctamente mostrar resultados de rendimiento por {\it Fleming, Philip J. and Wallace, John J.} en {\it How Not to Lie with Statistics: the Correct Way to Summarize Benchmark Results}, {ACM}, {29/3}, {1986}.
+\item Cómo correctamente mostrar resultados de rendimiento por {\it Fleming, Philip J. and Wallace, John J.} en {\it How Not to Lie with Statistics: the Correct Way to Summarize Benchmark Results}, {ACM}, {29/3}, {1986}. Un resumen apropiado de los resultados de ejecución de una aplicación facilita la tarea de entender su comportamiento bajo diferentes circunstancias.
 
-\item Cómo acceder a memoria eficientemente por {\it Drepper, Ulrich} en {\it What Every Programmer Should Know About Memory}, Reporte Técnico, 2007.
+\item Cómo acceder a memoria eficientemente por {\it Drepper, Ulrich} en {\it What Every Programmer Should Know About Memory}, Reporte Técnico, 2007. Conocer en detalle el funcionamiento de la memoria de un sistema, incluyendo sus distintos niveles de jerarquía y su funcionamiento a bajo nivel permite aprovechar al máximo su capacidad de transferencia y realizar cómputo eficientemente.
 
-\item Una discusión de la dificultad de la programación en paralelo por {\it McKenney, Paul E.} en {\it Is Parallel Programming Hard, And, If So, What Can You Do About It?}, Reporte Técnico, 2007.
+\item Una discusión de la dificultad de la programación en paralelo por {\it McKenney, Paul E.} en {\it Is Parallel Programming Hard, And, If So, What Can You Do About It?}, Reporte Técnico, 2007. Las posibilidades de mejora son limitadas si solo se busca mejorar un algoritmo o utilizar una máquina más rápida, dejando como única opción la paralelización para distribuir el cómputo entre diferentes sistemas.
 
-\item Una revisión de como medir rendimiento durante el desarrollo de una aplicación por {\it Woodside, Murray and Franks, Greg and Petriu, Dorina C.} en {\it The Future of Software Performance Engineering}, IEEE Computer Society, 2007.
+\item Una revisión de como medir rendimiento durante el desarrollo de una aplicación por {\it Woodside, Murray and Franks, Greg and Petriu, Dorina C.} en {\it The Future of Software Performance Engineering}, IEEE Computer Society, 2007. La medición de rendimiento es una tarea no trivial, que realizada sin la correcta disciplina puede llevar a conclusiones erróneas.
 
-\item Ejemplos de optimización compleja por {\it Jeff A. Bilmes et al.} en {\it BLAS3 Compatible Fast Matrix Matrix Multiply} y también por {\it R. Clint Whaley et al.} en {\it Automatically Tuned Linear Algebra Software}, ICSI, 1998.
+\item Ejemplos de optimización compleja por {\it Jeff A. Bilmes et al.} en {\it BLAS3 Compatible Fast Matrix Matrix Multiply} y también por {\it R. Clint Whaley et al.} en {\it Automatically Tuned Linear Algebra Software}, ICSI, 1998. La tarea de optimización requiere tener en cuenta detalles complejos del funcionamiento de la arquitectura de bajo nivel de los sistemas de cómputo.
 
-\item Cómo utilizar información de contadores de hardware durante la ejecución de un programa por {\it Thomas Ball} en {\it Eficiently counting program events with support for on-line queries}, ACM Programming Languages and Systems, 1994.
+\item Cómo utilizar información de contadores de hardware durante la ejecución de un programa por {\it Thomas Ball} en {\it Eficiently counting program events with support for on-line queries}, ACM Programming Languages and Systems, 1994. Los procesadores modernos facilitan entender su rendimiento mediante contadores programables, permitiendo conocer el uso de sus componentes internos.
 
-\item Cómo optimizar software teniendo en cuenta arquitectura de bajo nivel por {\it Intel} en {\it Intel® 64 and IA-32 Architectures Optimization Reference Manual}, Intel Press, 2013.
+\item Cómo optimizar software teniendo en cuenta arquitectura de bajo nivel por {\it Intel} en {\it Intel® 64 and IA-32 Architectures Optimization Reference Manual}, Intel Press, 2013. Las arquitecturas Intel y compatibles son las más usadas actualmente, las reglas básicas recomendadas para un funcionamiento eficiente por el mismo fabricante permiten mejorar el rendimiento.
 
 \end{enumerate}
 
-En principio el desarrollo se limita al soporte de ambientes {\it GNU/Linux}, con aplicaciones utilizando paralelismo implementado utilizando tecnología {\it OpenMP}.
+En principio el desarrollo se enfoca al soporte de ambientes {\it GNU/Linux}, con aplicaciones utilizando paralelismo implementado con tecnología {\it OpenMP}.
 
 \section{Temas de Investigación}
 
@@ -121,10 +121,22 @@ La infraestructura a desarrollar consiste de distintos componentes, como se demu
  \item[Pruebas de Escalabilidad:] se ejecuta la aplicación variando tamaño de problema y también capacidad de cómputo para obtener información de comportamiento y límites de escalabilidad.
   \item[Perfil de Ejecución:] automáticamente configura y ejecuta herramientas para medir rendimiento e identificar cuellos de botella en una aplicación utilizando soporte de {\it software} y {\it hardware}.
   \item[Análisis de Resultados:] utilizando la información anterior, calcula límites de potenciales mejoras y lista los cuellos de botella principales asociados al código de la aplicación.
-  \item[Generación de reporte:] a partir de la información anterior, compila un reporte incluyendo gráficos y referencias al código específico a optimizar.
+  \item[Optimización:] a partir de la información anterior, compila un reporte incluyendo gráficos y referencias al código específico a optimizar.
   \end{description}
 
-La tarea de optimización y paralelización entonces es realizada manualmente, utilizando información estadística y cuantitativa sobre el comportamiento de la aplicación, extraída automáticamente por la infraestructura a desarrollar.
+La tarea de optimización y paralelización entonces es realizada manualmente, utilizando información estadística y cuantitativa sobre el comportamiento de la aplicación, extraída automáticamente por la infraestructura a desarrollar. 
+
+\bigskip
+
+Una vez paralelizado una aplicación, los métodos usuales de optimización a bajo nivel son los siguientes:
+
+\begin{description}
+\item[Código:] se analiza el código fuente para mejorar la predicción de saltos, realizar inlining de rutinas muy utilizadas, alinear código y realizar unrolling de ciclos cuando permite mejorar el rendimiento.
+\item[Ejecución:] se analiza el código a nivel de ensamblador para comprobar el uso de instrucciones livianas o vectoriales, y además un uso reducido de registros.
+\item[Memoria:] se analiza las estructuras de datos para incrementar la tasa de transferencia a memoria, minimizar fallas de cache, alinear datos y mejorar la localidad del acceso a los mismos.
+\item[Precarga:] se analiza el uso de instrucciones de hardware para precargar datos en cache cuando los algoritmos predictivos no son suficientes.
+\item[Punto Flotante:] se considera el relajamiento de las reglas de redondeo y representación según los estandares, intercambiando error acumulado por velocidad de procesamiento.
+\end{description}
 
 \section{Esquema de Plan de Trabajo}
 
@@ -135,9 +147,9 @@ El siguiente cronograma muestra el plan de actividades tentativo incluyendo acti
   \centering
     \begin{tabular}{|l|l|}\hline
       {\bf Actividad} & {\bf Duración} \\ \hline
-	Estado del Arte & Octubre \\ \hline
-      Diseño de Alto Nivel & Noviembre \\ \hline
-      Prototipo & Diciembre-Enero-Febrero \\ \hline
+	Estado del Arte & Noviembre \\ \hline
+      Diseño de Alto Nivel & Diciembre \\ \hline
+      Prototipo & Enero-Febrero \\ \hline
       Pruebas de Rendimiento & Marzo \\ \hline
       Cálculo de Leyes & Abril \\ \hline
       Perfil de Rendimiento & Mayo-Junio-Julio \\ \hline
