--- a/doc/request-master.tex
+++ b/doc/request-master.tex
@@ -11,7 +11,7 @@
 
 \name{Lic. Andrés More\\DNI 28.103.988}
 
-\date{Córdoba, Agosto del 2013}
+\date{Córdoba, Noviembre del 2014}
 
 
 \begin{document}
